# engram

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  LICENSE  LICENSE.md  Makefile  README.md  docker-compose.ci.yml  docker-compose.yml  pr_body.md  pyproject.toml
.github/workflows/: ci.yml
adapters/engram-hooks/: README.md  pyproject.toml
adapters/engram-hooks/engram_hooks/: __init__.py  config.py  guards.py  hooks.py  volatile.py
adapters/engram-hooks/hermes_plugin/engram_memory/: __init__.py  audit_trace.py  evidence.py  plugin.yaml  recall_bridge.py
adapters/engram-hooks/tests/: conftest.py  test_audit_trace.py  test_audit_trace_binding.py  test_detect.py  test_evidence.py  test_guards.py  test_hermes_contract.py  test_hermes_discovery.py  test_hermes_plugin.py  test_lifecycle_telemetry.py  test_onboarding_profile.py  test_profile_fixture.py  test_recall_bridge.py  test_recall_config.py  test_render_provenance.py  test_retention_routing.py  test_session_context.py  test_session_end.py  test_shim.py
adapters/engram-hooks/tests/fixtures/hermes_stock_36f2a966/: PROVENANCE.md  hermes_constants.py
adapters/engram-hooks/tests/fixtures/hermes_stock_36f2a966/agent/: __init__.py  agent_init.py  agent_runtime_helpers.py  memory_manager.py  memory_provider.py  tool_executor.py
adapters/engram-hooks/tests/fixtures/hermes_stock_36f2a966/hermes_cli/: __init__.py  config.py  memory_setup.py  plugins.py
adapters/engram-hooks/tests/fixtures/hermes_stock_36f2a966/plugins/: __init__.py
adapters/engram-hooks/tests/fixtures/hermes_stock_36f2a966/plugins/memory/: __init__.py
adapters/engram-hooks/tests/fixtures/hermes_stock_36f2a966/tools/: __init__.py
adapters/engram-hooks/tests/fixtures/hermes_stock_75467998/: PROVENANCE.md
adapters/engram-hooks/tests/fixtures/hermes_stock_75467998/agent/: agent_runtime_helpers.py  memory_provider.py  tool_executor.py
adapters/engram-hooks/tests/fixtures/hermes_stock_75467998/tools/: __init__.py  memory_tool.py
adapters/mcp-server/: README.md  pyproject.toml
adapters/mcp-server/engram_mcp/: __init__.py  __main__.py  server.py
adapters/mcp-server/tests/: conftest.py  test_config.py  test_forwarding.py  test_integration.py  test_registration.py  test_smoke.py
conformance/context-manifest-v1/: README.md  lib.mjs  run_cross_language.py  verify.mjs  (+1 more)
deploy/: backup.sh
docs/: api-errors.md  backlog.json  context-manifest-v1.md  deployment.md  design.md  embeddings.md  usage-metering.md
engram/: __init__.py  auth.py  authority.py  candidate_ingests.py  canonicalize.py  classification.py  classification_evidence.py  classification_trust.py  cli.py  config.py  conflicts.py  context_manifest.py  context_receipt_dark_write.py  context_receipts.py  db.py  embedding_profiles.py  embeddings.py  epistemic_evaluator.py  feedback.py  internal_actors.py  jobs.py  memory_access.py  memory_audit.py  memory_context.py  memory_kinds.py  memory_profiles.py  memory_scope.py  migrations.py  models.py  promotion.py  promotion_policy.py  provider_clients.py  recall.py  relationship_recall.py  review_policy.py  safety.py  semantic.py  source_types.py  trust_policy.py  usage.py  (+2 more)
evals/: BASELINE-2026-07-13.md  recall_benchmark.py  run_evals.py
migrations/: 001_init.sql  002_backfill_indexes.sql  003_app_role_and_force_rls.sql  004_api_key_indexed_lookup.sql  005_classification_seed_rules.sql  005_jobs.sql  006_embedding_profiles.sql  007_memory_kinds.sql  008_recall_telemetry.sql  009_memory_edges.sql  010_internal_key.sql  011_feedback_integrity.sql  012_memory_authority.sql  013_session_end_defaults.sql  014_classification_evidence.sql  015_classification_receipt_integrity.sql  016_promotion_path_a_v2.sql  017_usage_events.sql  018_usage_outcome_attempts.sql  019_provider_usage_semantics.sql  020_candidate_ingests.sql  021_scope_write_defaults.sql  022_memory_profiles.sql  023_profile_read_context.sql  024_profile_write_context.sql  025_candidate_execution_context.sql  026_context_receipts.sql  app_role_password.sh
profiles/: hermes-engram-dogfood.yaml
schemas/: context-manifest-v1.schema.json  memory-e2e-audit-v1.schema.json
scripts/: README.md  benchmark_startup_recall.py  generate_context_manifest_negatives.py  generate_context_manifest_schema.py  generate_context_manifest_vectors.py  import_cca.py  import_mempalace.py  install-hermes.sh  onboard-profile.sh  run_ci.py  run_memory_e2e_audit.py  run_trust_proof.py  setup-hooks.sh  setup-python-dev.sh  trust_proof_files.py  update-hermes-profile.py  verify_context_manifest_negatives.py  verify_context_manifest_vectors.py
sdk/engram-client/: pyproject.toml
sdk/engram-client/engram_client/: __init__.py  client.py  models.py
sdk/engram-client/tests/: test_client.py  test_memory_profiles.py  test_models.py
tests/: conftest.py  context_receipt_helpers.py  test_actor_identity.py  test_agents.py  test_auth.py  test_authority_policy.py  test_authorization_regressions_unit.py  test_backfill_embeddings.py  test_benchmark_startup_recall.py  test_bootstrap_memory_profile.py  test_candidate_execution_context_migration.py  test_candidate_execution_context_postgres.py  test_candidate_ingests_migration.py  test_candidate_ingests_unit.py  test_canonicalize.py  test_ci_contract.py  test_classification.py  test_classification_evidence_migration.py  test_classification_evidence_unit.py  test_classification_receipt_integrity_migration.py  test_classification_trust.py  test_cli.py  test_conflict_resolution_integrity.py  test_conflict_resolution_postgres.py  test_conflicts.py  test_context_manifest_golden.py  test_context_manifest_negatives.py  test_context_manifest_privacy.py  test_context_manifest_route.py  test_context_manifest_schema.py  test_context_manifest_unit.py  test_context_receipt_dark_write.py  test_context_receipt_dark_write_postgres.py  test_context_receipt_integrity.py  test_context_receipt_store_postgres.py  test_context_receipts_migration.py  test_context_receipts_postgres.py  test_cursor_pagination.py  test_cursor_pagination_postgres.py  test_denied_profile_preflight.py  (+95 more)
(+67 files in other folders)
