[project]
name = "engram"
version = "0.1.0"
description = "Shared structured memory for multi-agent AI teams"
readme = "README.md"
license = { file = "LICENSE.md" }
requires-python = ">=3.11"
keywords = ["ai", "agents", "memory", "multi-agent", "rag", "knowledge-graph"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "pgvector>=0.3",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "httpx>=0.27",
    "openai>=1.0",
    "bcrypt>=4.0",
    "python-multipart>=0.0.9",
    # RFC 8785 JSON Canonicalization Scheme (JCS) for the deterministic context
    # manifest contract (ENG-CONTEXT-001). Pure-Python, zero runtime deps, full
    # ECMAScript/ryu number serialization + UTF-16 member ordering. Chosen over
    # `jcs` (last release 2022-04) for active maintenance; both are spec-clean.
    "rfc8785>=0.1.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "httpx>=0.27",
    "ruff>=0.5",
    "mypy>=1.10",
    "aiosqlite>=0.20",
]

[project.urls]
Homepage = "https://github.com/Zutfen-LLC/engram"
Documentation = "https://github.com/Zutfen-LLC/engram/blob/main/docs/design.md"
Repository = "https://github.com/Zutfen-LLC/engram"

[project.scripts]
engram = "engram.cli:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["engram*"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
strict = true

# asyncpg ships no type stubs / py.typed marker.
[[tool.mypy.overrides]]
module = "asyncpg"
ignore_missing_imports = true
