[project]
name = "engram-hooks"
version = "0.1.0"
description = "Hermes lifecycle hooks companion library for Engram (classify + remember, write-boundary guard, volatile store)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["ai", "agents", "memory", "engram", "hermes", "lifecycle", "multi-agent"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    # The local-dev bootstrap installs the sibling SDK into the same venv first.
    # Keep the runtime dependency as a normal package name so editable installs of
    # this adapter do not depend on a fragile relative file URL during wheel metadata
    # generation.
    "engram-client>=0.1.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
    "mypy>=1.10",
    "pyyaml>=6.0",
]

[project.urls]
Homepage = "https://github.com/Zutfen-LLC/engram"
Repository = "https://github.com/Zutfen-LLC/engram"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["engram_hooks*"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.11"
strict = true
