[project]
name = "engram-client"
version = "0.1.0"
description = "Thin async Python SDK for the Engram memory service"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["ai", "agents", "memory", "engram", "multi-agent", "rag"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
    "mypy>=1.10",
]

[project.urls]
Homepage = "https://github.com/Zutfen-LLC/engram"
Repository = "https://github.com/Zutfen-LLC/engram"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["engram_client*"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = [
    # Test fixtures use a fake non-loopback http host; the dedicated
    # test_plaintext_http_warns_* test asserts the warning fires for real.
    "ignore:api_key sent over plaintext http:UserWarning",
]

[tool.mypy]
python_version = "3.11"
strict = true
